# mesa

./: configure.ac
src/gallium/: Makefile.am
src/gallium/auxiliary/pipe-loader/: pipe_loader_drm.c
src/gallium/auxiliary/target-helpers/: drm_helper.h  drm_helper_public.h
src/gallium/auxiliary/vl/: vl_winsys_dri.c
src/gallium/drivers/nouveau/: nouveau_screen.h  nv_object.xml.h
src/gallium/drivers/nouveau/codegen/: nv50_ir_ra.cpp  nv50_ir_target.cpp
src/gallium/drivers/nouveau/nvc0/: nvc0_resource.c  nvc0_screen.c
src/gallium/drivers/tegra/: Makefile.am  Makefile.sources  tegra_context.c  tegra_context.h  tegra_resource.c  tegra_resource.h  tegra_screen.c  tegra_screen.h
src/gallium/state_trackers/dri/: dri2.c
src/gallium/state_trackers/vdpau/: device.c
src/gallium/targets/dri/: Makefile.am  target.c
src/gallium/targets/pipe-loader/: Makefile.am  pipe_tegra.c
src/gallium/targets/vdpau/: Makefile.am
src/gallium/winsys/nouveau/drm/: nouveau_drm_winsys.c
src/gallium/winsys/sw/kms-dri/: kms_dri_sw_winsys.c
src/gallium/winsys/tegra/drm/: Makefile.am  tegra_drm_public.h  tegra_drm_winsys.c
src/gbm/backends/dri/: gbm_dri.c
src/glx/: dri2_glx.c
src/loader/: loader.c  loader_dri3_helper.c
src/mesa/drivers/dri/common/: dri_util.c
src/mesa/drivers/dri/nouveau/: nouveau_screen.h
src/mesa/state_tracker/: st_cb_texture.c
